# bitly-clone

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: app.py  conf.py  resources.py  utils.py
backend/src/urlshortner/: app.py  conf.py  utils.py
backend/src/urlshortner/cached_repositories/: link.py
backend/src/urlshortner/repositories/: __init__.py
backend/src/urlshortner/repositories/cache/: base.py  memory.py  redis.py
backend/src/urlshortner/repositories/db/: base.py  memory.py  mongo.py
backend/src/urlshortner/resources/: __init__.py  redirect.py  shorten.py  telemetry.py
backend/src/urlshortner/services/link/: base.py  basic.py
backend/src/urlshortner/services/telemetry/: base.py  basic.py
backend/test/: test_api.py
