[project]
name = "URLShortener"
version = "0.1.0"
description = "URL Shortener"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.8",
    "dnspython==2.7.0",
    "falcon==4.0.2",
    "h11==0.14.0",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pymongo==4.11.2",
    "pytest==8.3.5",
    "redis==5.2.1",
    "uvicorn==0.34.0",
    "validators==0.34.0",
]
